TRANSLATE-1273 Propose new terminology and terminology changes in the GUI - fixed (hopefully!): "When clicking on termEntry attributes  tab and the definition is really long, the whole area jumps to the area below the left column."

--- a/application/modules/editor/termportal/css/termportal.css
+++ b/application/modules/editor/termportal/css/termportal.css
@@ -212,6 +212,7 @@ END LICENSE AND COPYRIGHT
     order: 2;
     flex-shrink: 1;
     flex-grow:  1;
+    width: 60%; /* workaround to prevent jump */
 }
 
 #termTable,
